--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* na pas vocation a resté */ 
+.avertisement {
+    text-align: center;
+    font-family: "Calibri";
+}
+
+
 /* DOM elements */
 a {
     text-decoration: none;
@@ -53,26 +60,24 @@ a:hover {
     border-radius: 0px 25px 25px 0px;
 }
 
-.a_propos_de_moi{
-    background-color: white;
-    font-family: "Calibri";
-}
 
 .text_about_myself {
     text-align: center;
     font-size: large;
-}
+    background-color: white;
+    font-family: "Calibri";
+    padding: 10%;
 
-#mes_competence {
-    background-color: bisque;
-    font-family: "Calibri"
 }
 
 .text_about_my_skills {
     text-align: center;
     font-size: large;
+    background-color: bisque;
+    font-family: "Calibri";
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
-
 
 #mon_parcours {
     background-color: white;
@@ -83,20 +88,31 @@ a:hover {
     font-size: 150%;
     font-weight:bolder;
     text-decoration: underline;
+    padding-top: 5%;
 }
 
-#me_contacte {
+.text_about_my_project {
+    text-align: center;
+    font-size: large;
     background-color: bisque;
-    font-family: "Calibri"
+    font-family: "Calibri";
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
+
 .contact_me {
     text-align: center;
     font-size: large;
+    background-color: white;
+    font-family: "Calibri";
+    padding-top: 10%;
+    padding-bottom: 10%;
+    
 }
 
 /* Css pour le block de presantation de mon parcours profésionnel de ma formation */
 .tab_parcours {
-    padding: 2% 2% 2% 2%;
+    padding: 2% 2% 5% 2%;
     text-align: center;
     width: 70%;
     height: fit-content;
