--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ a:hover {
   }
 
 .slideshow-container:active img {
-    transform: scale(1,5);
+    transform: scale(175%);
   }
   /* Caption text */
   .text {
