--- a/style.css
+++ b/style.css
@@ -36,6 +36,16 @@ a:hover {
 .titre_texte {
     float: right;
 }
+.part_title{
+    text-align: center;
+    font-size: 2%;
+    font-weight:bolder;
+    text-decoration: underline;
+    padding-top: 2%;
+    font-size: 200%;
+    font-family: "Calibri"
+}
+
 
 .bar_nav_rapide{
     display : flex;
@@ -97,14 +107,7 @@ a:hover {
 #mon_parcours {
     background-color: white;
     font-family: "Calibri";
-}
-.my_route_title{
-    text-align: center;
-    font-size: 2%;
-    font-weight:bolder;
-    text-decoration: underline;
-    padding-top: 2%;
-    font-size: 200%;
+
 }
 
 /* parti présentation de mes projet */
@@ -112,15 +115,6 @@ a:hover {
 #my_projets {
     background-color: bisque;
     font-family: "Calibri";
-}
-
-.project_title {
-    text-align: center;
-    font-size: 2%;
-    font-weight:bolder;
-    text-decoration: underline;
-    padding-top: 2%;
-    font-size: 200%;
 }
 
 .project_name {
@@ -157,8 +151,12 @@ a:hover {
     font-size: large;
     background-color: white;
     font-family: "Calibri";
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+    width: 70%;
+    height: fit-content;
+    
     
 }
 
